# Algorithem_String_C-

./: CMakeLists.txt  tmp.cpp  tmp2.cpp
SuffixTrees/: .out  edge.cpp  edge.h  node.h  stree2006.cpp  suffixTree.cpp  suffixTree.h
SuffixTrees/.out.dSYM/Contents/Resources/DWARF/: .out
